<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_db"
            android:textSize="32sp"
            android:paddingBottom="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backup_db_button"
            android:text="@string/backup_db_sc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:id="@+id/backup_textview"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_online"
            android:text="@string/backup_db_dropbox"/>

        <Button
            android:layout_marginTop="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drop_db"
            android:text="@string/drop_db"/>


    </LinearLayout>

</LinearLayout>