<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropbox_integration"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropbox_integration_explanation"
        android:textSize="20sp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="30sp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dropbox_integration"
        android:id="@+id/enable_dropbox_checkbox"
        />

</LinearLayout>