<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nasa_mental_scale_title_textview"
            android:text="@string/nasa_mental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nasa_mental_scale_explanation_textview"
            android:text="@string/nasa_mental_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/nasa_mental_scale_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/seekbar_background"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            android:progressDrawable="@drawable/seekbar_progress" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scale_low"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:text="@string/scale_high"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>



        <TextView
            android:id="@+id/nasa_physical_scale_title_textview"
            android:text="@string/nasa_physical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nasa_physical_scale_explanation_textview"
            android:text="@string/nasa_physical_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/nasa_physical_scale_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/seekbar_background"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"

            android:progressDrawable="@drawable/seekbar_progress" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scale_low"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:text="@string/scale_high"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>



        <TextView
            android:id="@+id/nasa_temporal_scale_title_textview"
            android:text="@string/nasa_temporal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nasa_temporal_scale_explanation_textview"
            android:text="@string/nasa_temporal_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/nasa_temporal_scale_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/seekbar_background"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"

            android:progressDrawable="@drawable/seekbar_progress" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scale_low"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:text="@string/scale_high"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>




        <TextView
            android:id="@+id/nasa_performence_scale_title_textview"
            android:text="@string/nasa_performance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nasa_performence_scale_explanation_textview"
            android:text="@string/nasa_performance_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/nasa_performance_scale_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/seekbar_background"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"

            android:progressDrawable="@drawable/seekbar_progress" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scale_low"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:text="@string/scale_high"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>








        <TextView
            android:id="@+id/nasa_effort_scale_title_textview"
            android:text="@string/nasa_effort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nasa_effort_scale_explanation_textview"
            android:text="@string/nasa_effort_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/nasa_effort_scale_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/seekbar_background"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"

            android:progressDrawable="@drawable/seekbar_progress" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scale_low"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="100sp"
                android:layout_marginRight="100sp"
                android:text="@string/scale_high"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>








    <TextView
        android:id="@+id/nasa_frustration_scale_title_textview"
        android:text="@string/nasa_frustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nasa_frustration_scale_explanation_textview"
        android:text="@string/nasa_frustration_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <SeekBar
        android:id="@+id/nasa_frustration_scale_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/seekbar_background"
        android:max="100"
        android:progress="0"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"

        android:progressDrawable="@drawable/seekbar_progress" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/scale_low"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            android:text="@string/scale_high"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"
            android:textSize="12sp" />
    </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/validate"

        />
</RelativeLayout>